Increase font button width to prevent Lucida Console from wrapping
- Increased min-width from 130px to 155px for #fontBtn
- Ensures "Lucida Console" displays on a single line

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
 }
 
 #fontBtn {
-    min-width: 130px;
+    min-width: 155px;
     justify-content: space-between;
 }
 
